force-app/main/default/objects/CustomCase__c/CustomCase__c.object-meta.xml
<CustomObject>
    <description>Basic custom object for test automation</description>
    <label>Custom Case</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>