force-app/main/default/objects/CustomCase__c/fields/Assigned_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From_Queue__c</fullName>
    <label>Assigned From Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>