force-app/main/default/objects/CustomCase__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Cases</relationshipLabel>
    <relationshipName>Custom_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>