force-app/main/default/objects/CustomCase__c/fields/Further_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Further_Work_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Further Work Required</label>
    <type>Checkbox</type>
</CustomField>