force-app/main/default/objects/CustomCase__c/fields/Link_To_KB__c.field-meta.xml
<CustomField>
    <fullName>Link_To_KB__c</fullName>
    <label>Link To KB</label>
    <type>Url</type>
</CustomField>