force-app/main/default/objects/CustomCase__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Issue Refund</fullName>
            </value>
            <value>
                <fullName>Send Out Part</fullName>
            </value>
            <value>
                <fullName>Pass to 3rd Line</fullName>
            </value>
            <value>
                <fullName>Request Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>