force-app/main/default/objects/CustomCase__c/fields/Opened_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Opened_Datetime__c</fullName>
    <label>Opened Datetime</label>
    <type>DateTime</type>
</CustomField>