force-app/main/default/objects/CustomCase__c/fields/Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Q_assign_Last_Assigned_Date__c</fullName>
    <label>Q-assign Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>