force-app/main/default/objects/CustomCase__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Warranty Item</fullName>
            </value>
            <value>
                <fullName>Missing Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>