force-app/main/default/objects/CustomCase__c/listViews/InboundCustomCases_CustomCase.listView-meta.xml
<ListView>
    <fullName>InboundCustomCases_CustomCase</fullName>
    <filterScope>Queue</filterScope>
    <label>InboundCustomCases</label>
    <queue>InboundCustomCases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>