force-app/main/default/objects/CustomCase__c/listViews/OutboundCustomCases_CustomCase1.listView-meta.xml
<ListView>
    <fullName>OutboundCustomCases_CustomCase1</fullName>
    <filterScope>Queue</filterScope>
    <label>OutboundCustomCases</label>
    <queue>OutboundCustomCases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>